--- a/res/css/import/_resets.scss
+++ b/res/css/import/_resets.scss
@@ -35,7 +35,7 @@ body {
     width: 100%;
     min-height: 100%;
     margin: 0;
-    background: $window-background;
+    background: $background-window;
 }
 
 /*
