--- a/res/css/styles.css
+++ b/res/css/styles.css
@@ -20,7 +20,6 @@
 /* Theme colors */
 /* Background colors */
 /* Text colors */
-/* Footer colors */
 /* Divider colors */
 /**
  * Copyright 2015 Google Inc. All Rights Reserved.
@@ -137,7 +136,6 @@
 /* Theme colors */
 /* Background colors */
 /* Text colors */
-/* Footer colors */
 /* Divider colors */
 /*
  * What follows is the result of much research on cross-browser styling.
@@ -416,7 +414,7 @@ body {
   width: 100%;
   min-height: 100%;
   margin: 0;
-    background: #333333;
+    background: #424242;
 }
 
 /*
@@ -489,7 +487,6 @@ hr {
 /* Theme colors */
 /* Background colors */
 /* Text colors */
-/* Footer colors */
 /* Divider colors */
 /**
  * Copyright 2015 Google Inc. All Rights Reserved.
@@ -1222,11 +1219,19 @@ paper-button {
 
 paper-button[raised][filled] {
     background: #212121;
-    color: rgba(0, 0, 0, 0.87);
+    color: white;
 }
 
 paper-item, paper-icon-item {
     font-weight: 500 !important;
+}
+
+paper-card {
+    color: rgba(0, 0, 0, 0.87);
+}
+
+paper-card p {
+    color: rgba(0, 0, 0, 0.54);
 }
 
 /* Grid */
@@ -1276,7 +1281,7 @@ app-drawer-layout app-header-layout app-header app-toolbar paper-icon-button pap
 app-drawer-layout app-drawer {
   box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
   z-index: 8;
-  background: #212121 !important;
+    background: #333333 !important;
     color: white !important;
 }
 
@@ -1478,7 +1483,7 @@ footer {
   flex-flow: row wrap;
   justify-content: space-between;
     color: rgba(255, 255, 255, 0.7);
-    background-color: whitesmoke;
+    background-color: #424242;
 }
 
 footer a {
