--- a/_includes/collection.html
+++ b/_includes/collection.html
@@ -1,4 +1,4 @@
-<iron-grid class="{{ include.info.id }}" id="{{ include.info.id }}">
+<iron-grid class="collection" id="{{ include.info.id }}">
 
     <h2 class="m12">{{ include.info.title }}</h2>
 
