--- a/_includes/collection.html
+++ b/_includes/collection.html
@@ -6,6 +6,7 @@
     <paper-card class="xs12 s6 m4" {% if item.image %} image="{{ item.image }}" {% endif %} elevation="2">
         <div class="card-content">
             <h5>{{ item.title }}</h5>
+            <time>{{ item.date | date: "%b %Y" }}</time>
             <p class="description">{{ item.description }}</p>
         </div>
         <div class="card-actions">
