--- a/res/css/styles.css
+++ b/res/css/styles.css
@@ -1438,6 +1438,16 @@ app-drawer-layout:not(.narrow) app-drawer app-toolbar {
     text-align: center;
 }
 
+.services section p {
+    font-family: "Kreon", "Georgia", "Times New Roman", serif;
+    font-size: 17px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0.04em;
+    margin-top: 24px;
+    margin-bottom: 16px;
+}
+
 .services section iron-icon {
     width: 48px;
     height: 48px;
