Updated collections format

--- a/_includes/collection.html
+++ b/_includes/collection.html
@@ -9,7 +9,7 @@
             {% if item.date %}
             <time>{{ item.date | date: "%b %Y" }}</time>
             {% endif %}
-            {{ item.content }}
+            {{ item.excerpt }}
         </div>
         <div class="card-actions">
             <div class="horizontal justified">
