Updated background colors

--- a/res/css/styles.css
+++ b/res/css/styles.css
@@ -414,7 +414,7 @@ body {
   width: 100%;
   min-height: 100%;
   margin: 0;
-    background: #424242;
+    background: #333333;
 }
 
 /*
@@ -1307,7 +1307,7 @@ app-drawer-layout app-header-layout app-header app-toolbar paper-icon-button pap
 app-drawer-layout app-drawer {
   box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
   z-index: 8;
-    background: #333333 !important;
+    background: #424242 !important;
     color: white !important;
 }
 
@@ -1446,6 +1446,7 @@ app-drawer-layout:not(.narrow) app-drawer app-toolbar {
     letter-spacing: 0.04em;
     margin-top: 24px;
     margin-bottom: 16px;
+    font-size: 18px;
 }
 
 .services section iron-icon {
@@ -1505,7 +1506,7 @@ footer {
   flex-flow: row wrap;
   justify-content: space-between;
     color: rgba(255, 255, 255, 0.7);
-    background-color: #424242;
+    background-color: #333333;
 }
 
 footer a {
