--- a/res/css/styles.scss
+++ b/res/css/styles.scss
@@ -272,6 +272,7 @@ app-drawer-layout {
 
             margin-top: 24px;
             margin-bottom: 16px;
+            font-size: 18px;
         }
 
         iron-icon {
