--- a/res/css/import/_variables.scss
+++ b/res/css/import/_variables.scss
@@ -13,8 +13,8 @@ $color-primary-dark: $color-black;
 $color-accent: #dd1155;
 
 /* Background colors */
-$background-window: $palette-grey-800;
-$background-drawer: #333333;
+$background-window: #333333;
+$background-drawer: $palette-grey-800;
 $background-footer: $background-window;
 
 /* Text colors */
