Improved background colors

--- a/res/css/import/_variables.scss
+++ b/res/css/import/_variables.scss
@@ -14,7 +14,7 @@ $color-accent: #dd1155;
 
 /* Background colors */
 $background-window: #333333;
-$background-drawer: $palette-grey-800;
+$background-drawer: #3e3e3e;
 $background-footer: $background-window;
 
 /* Text colors */
