--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,11 +27,10 @@
     <meta name="theme-color" content="#424242">
 
     <!-- Web components -->
-    <script>
-        {%
-            include / bower_components / webcomponentsjs / webcomponents - lite.js %
-        }
-    </script>
+    {% assign script = 'script' %}
+    <{{ script }}>{% include /bower_components/webcomponentsjs/webcomponents-lite.js %}
+</
+{{ script }}>
     <link rel="import" href="/bower_components/app-layout/app-layout.html">
     <link rel="import" href="/bower_components/app-layout/app-scroll-effects/app-scroll-effects.html">
     <link rel="import" href="/bower_components/iron-grid/iron-grid.html">
@@ -53,21 +52,9 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <!-- Styles -->
-    <style>
-        {
-        %
-        include
-        /res/
-        css
-        /
-        styles
-        .
-        min
-        .
-        css
-        %
-        }
-    </style>
+{% assign style = 'style' %}
+<{{ style }}>{% include /res/css/styles.min.css %}
+</{{ style }}>
 
 </head>
 <body class="page-{{ page.title | slugify }} {% if page.url == '/' %}page-index{% endif %}">
