Directly include styles and scripts

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,8 +52,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <!-- Styles -->
-{% assign style = 'style' %}
-<{{ style }}>{% include /res/css/styles.min.css %}
+{% assign style = 'style' %}<{{ style }}>{% include /res/css/styles.min.css %}
 </{{ style }}>
 
 </head>
