Don't directly include styles and scripts

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,8 +2,6 @@
 <html xmlns="http://www.w3.org/1999/html">
 <head>
     {% assign asset_version = 'XBrebwpyp8' %}
-    {% assign comment = '/*' %}
-    {% assign uncomment = '*/' %}
 
     <!-- Compatibility -->
     <meta charset="utf-8">
@@ -29,7 +27,7 @@
     <meta name="theme-color" content="#424242">
 
     <!-- Web components -->
-    <script>/*{{ uncomment }}{% include /bower_components/webcomponentsjs/webcomponents-lite.js %}{{ comment }}*/</script>
+    <script src="/bower_components/webcomponentsjs/webcomponents-lite.min.js?v={{ asset_version }}"></script>
     <link rel="import" href="/bower_components/app-layout/app-layout.html">
     <link rel="import" href="/bower_components/app-layout/app-scroll-effects/app-scroll-effects.html">
     <link rel="import" href="/bower_components/iron-grid/iron-grid.html">
@@ -51,7 +49,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <!-- Styles -->
-    <style>/*{{ uncomment }}{% include /res/css/styles.min.css %}{{ comment }}*/</style>
+    <link rel="stylesheet" href="/res/css/styles.min.css?v={{ asset_version }}">
 
 </head>
 <body class="page-{{ page.title | slugify }} {% if page.url == '/' %}page-index{% endif %}">
