--- a/res/css/styles.scss
+++ b/res/css/styles.scss
@@ -72,8 +72,8 @@ paper-card {
         }
     }
     .card-actions {
-        padding-left: 8px;
-        padding-right: 8px;
+        padding-left: 8px !important;
+        padding-right: 8px !important;
         paper-button {
             margin: 0;
         }
