Optimized html output

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@ layout: compress
     <meta name="theme-color" content="#424242">
 
     <!-- Web components -->
-    <script src="/bower_components/webcomponentsjs/webcomponents-lite.min.js?v={{ asset_version }}"></script>
+    <script async src="/bower_components/webcomponentsjs/webcomponents-lite.min.js?v={{ asset_version }}"></script>
     <link rel="import" href="/bower_components/app-layout/app-layout.min.html">
     <link rel="import" href="/bower_components/app-layout/app-scroll-effects/app-scroll-effects.min.html">
     <link rel="import" href="/bower_components/iron-grid/iron-grid.min.html">
@@ -46,11 +46,6 @@ layout: compress
     <link rel="import" href="/bower_components/paper-card/paper-card.min.html">
     <link rel="import" href="/bower_components/paper-material/paper-material.min.html">
     <link rel="import" href="/bower_components/prism-element/prism-highlighter.min.html">
-
-    <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Kreon:400,700|Poppins:500,600,700|Source+Code+Pro:500,600"
-          rel="stylesheet">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <!-- Styles -->
     <link rel="stylesheet" href="/res/css/styles.min.css?v={{ asset_version }}">
@@ -148,3 +143,7 @@ layout: compress
 </body>
 
 </html>
+
+<!-- Fonts -->
+<link href="https://fonts.googleapis.com/css?family=Kreon:400,700|Poppins:500,600,700|Source+Code+Pro:500,600"
+      rel="stylesheet">
