--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,10 @@ layout: compress
     <meta name="theme-color" content="#424242">
 
     <!-- Web components -->
-    <script async src="/bower_components/webcomponentsjs/webcomponents-lite.min.js?v={{ asset_version }}"></script>
+    <!-- <script async src="/bower_components/webcomponentsjs/webcomponents-lite.min.js?v={{ asset_version }}"></script> -->
+    {{ "
+    <script>" }}{% include js/webcomponents-lite.min.js %}{{ "</script>
+    " }}
     <link rel="import" href="/bower_components/app-layout/app-layout.min.html">
     <link rel="import" href="/bower_components/app-layout/app-scroll-effects/app-scroll-effects.min.html">
     <link rel="import" href="/bower_components/iron-grid/iron-grid.min.html">
