Inlined Web Components JS

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,9 +32,7 @@ layout: compress
 
     <!-- Web components -->
     <!-- <script async src="/bower_components/webcomponentsjs/webcomponents-lite.min.js?v={{ asset_version }}"></script> -->
-    {{ "
-    <script>" }}{% include js/webcomponents-lite.min.js %}{{ "</script>
-    " }}
+    {{ '<script>' }}{% include js/webcomponents-lite.min.js %}{{ '</script>' }}
     <link rel="import" href="/bower_components/app-layout/app-layout.min.html">
     <link rel="import" href="/bower_components/app-layout/app-scroll-effects/app-scroll-effects.min.html">
     <link rel="import" href="/bower_components/iron-grid/iron-grid.min.html">
